--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>Dan Travels</h1></a>
+            <a href="index.html"><h1>TRAVESTO</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Free Certified</span>
