--- a/World-categories.html
+++ b/World-categories.html
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>Dan Travels</h1></a>
+            <a href="index.html"><h1>TRAVESTO</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Free Certified</span>
@@ -199,7 +199,7 @@
         <p>“Travel makes one modest, you see what a tiny place you occupy in the world.” - Gustave Flaubert</p>
       </section>
     </div>
-    <div class="text-center">&copy; Copyright Dan Travels 2020</div>
+    <div class="text-center">&copy; Copyright TRAVESTO 2020</div>
   </div>
 </footer>
 
