--- a/Indonesia-category.html
+++ b/Indonesia-category.html
@@ -170,7 +170,7 @@
         <p>“Travel makes one modest, you see what a tiny place you occupy in the world.” - Gustave Flaubert</p>
       </section>
     </div>
-    <div class="text-center">&copy; Copyright Dan Travels 2020</div>
+    <div class="text-center">&copy; Copyright TRAVESTO 2020</div>
   </div>
 </footer>
 
